5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1635_2445.log
== TEST (2019-04-15 12:40:01) 
-- CODE:
cf=1
fc=2

t=float(input("temp:"))
c=5/9*(fc-32)
f
if(t== cf):
	print(c)
else:
	print(f)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:40:24) 
-- CODE:
cf=1
fc=2

t=float(input("temp:"))
c=5/9*(fc-32)
f
if(t==1):
	print(c)
else:
	print(f)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:42:08) 
-- CODE:
cf=1
fc=2

t=float(input("temp:"))
c=5/9*(t-32)
f= t*9/5+(32)
if(t==1):
	print(c)
else:
	print(f)


-- EXECUTION TIME:
0.137404
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 4, in <module>
    t=float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:42:11) 
-- CODE:
cf=1
fc=2

t=float(input("temp:"))
c=5/9*(t-32)
f= t*9/5+(32)
if(t==1):
	print(c)
else:
	print(f)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:43:22) 
-- CODE:
c=1
f=2

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(c)
else:
	print(f)


-- EXECUTION TIME:
0.165174
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 4, in <module>
    t=float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:44:33) 
-- CODE:
c=cf
f=fc

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==cf):
	print(c)
else:
	print(f)


-- EXECUTION TIME:
0.163316
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 1, in <module>
    c=cf
NameError: name 'cf' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:44:36) 
-- CODE:
c=cf
f=fc

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==cf):
	print(c)
else:
	print(f)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    c=cf
NameError: name 'cf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:45:01) 
-- CODE:
1=c
2=f

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==cf):
	print(c)
else:
	print(f)


-- EXECUTION TIME:
0.245436
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 1
    1=c
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:45:19) 
-- CODE:
1=c
2=f

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(c)
else:
	print(f)


-- EXECUTION TIME:
0.181975
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 1
    1=c
    ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:45:23) 
-- CODE:
1=c
2=f

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(c)
else:
	print(f)


-- ERROR:
File "XXXX", line 1
    1=c
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:45:56) 
-- CODE:
c=1
f=2

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
else:
	print(fc)


-- EXECUTION TIME:
0.198844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 4, in <module>
    t=float(input())
ValueError: could not convert string to float: 'C'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:45:58) 
-- CODE:
c=1
f=2

t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
else:
	print(fc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=float(input())
ValueError: could not convert string to float: 'C'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:47:25) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
else:
	print(fc)


-- EXECUTION TIME:
0.278957
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:47:28) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
else:
	print(fc)


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:48:45) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
if(t==2):
	print(fc)


-- EXECUTION TIME:
0.140742
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:

-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:

-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:48:47) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
if(t==2):
	print(fc)


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:50:12) 
-- CODE:
c=celcius
f=fahrenheit
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==c):
	print(cf)
else:
	print(fc)


-- EXECUTION TIME:
0.156123
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 1, in <module>
    c=celcius
NameError: name 'celcius' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:50:15) 
-- CODE:
c=celcius
f=fahrenheit
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==c):
	print(cf)
else:
	print(fc)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    c=celcius
NameError: name 'celcius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:50:52) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
else(t==2):
	print(fc)


-- EXECUTION TIME:
0.136956
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 9
    else(t==2):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:50:53) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
else(t==2):
	print(fc)


-- ERROR:
File "XXXX", line 9
    else(t==2):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:51:01) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(t==1):
	print(cf)
else:
	print(fc)


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:51:26) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(x==1):
	print(cf)
else:
	print(fc)


-- EXECUTION TIME:
0.170188
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 12:51:29) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(x==1):
	print(cf)
else:
	print(fc)


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:51:46) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(x==1):
	print(cf)
else:
	print(fc)


-- EXECUTION TIME:
0.152031
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:47:16) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(x==1):
	print(round(cf,2))
else:
	print(round(fc,2))


-- EXECUTION TIME:
0.160673
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:47:19) 
-- CODE:
c=1
f=2
x=input("c ou f:")
t=float(input("temp:"))
cf=5/9*(t-32)
fc= t*9/5+(32)
if(x==1):
	print(round(cf,2))
else:
	print(round(fc,2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:48:43) 
-- CODE:
x=input("c ou f:")
t=float(input("temp:"))
if(x==c):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- EXECUTION TIME:
0.162078
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    if(x==c):
NameError: name 'c' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:48:45) 
-- CODE:
x=input("c ou f:")
t=float(input("temp:"))
if(x==c):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if(x==c):
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:49:52) 
-- CODE:
x=input("c ou f:")
t=float(input("temp:"))
if(x=="c"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- EXECUTION TIME:
0.168413
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:49:54) 
-- CODE:
x=input("c ou f:")
t=float(input("temp:"))
if(x=="c"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:50:21) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:32) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- EXECUTION TIME:
0.199946
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:51:34) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:51:45) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- EXECUTION TIME:
0.126306
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:51:46) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:52:08) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= t*9/5+(32)
	print(round(fc,2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:54:01) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= (t-32)*5/9
	print(round(fc,2))


-- EXECUTION TIME:
0.149699
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:54:03) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= (t-32)*5/9
	print(round(fc,2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:54:18) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= (t-32)*5/9
	print(round(fc,2))


-- EXECUTION TIME:
0.171685
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:55:54) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= (t-32)*5/9
	print(round(fc,2))


-- EXECUTION TIME:
0.215692
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:55:56) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="C"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= (t-32)*5/9
	print(round(fc,2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:56:15) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="c"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= (t-32)*5/9
	print(round(fc,2))


-- EXECUTION TIME:
0.14013
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 13:56:17) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="c"):
	cf=5/9*(t-32)
	print(round(cf,2))
else:
	fc= (t-32)*5/9
	print(round(fc,2))


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 13:57:21) 
-- CODE:
x=input("C ou F:")
t=float(input("temp:"))
if(x=="c"):
	fc= (t-32)*5/9
	print(round(cf,2))
else:

	cf=5/9*(t-32)
	print(round(fc,2))


-- EXECUTION TIME:
0.14438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 9, in <module>
    print(round(fc,2))
NameError: name 'fc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
